# Verdyce

./: .gitignore  Cargo.toml  README.md
src/: engine.rs  lib.rs
src/decay/: mod.rs
src/models/: mod.rs  proposal.rs  vote.rs
src/threshold/: mod.rs
src/window/: mod.rs
tests/: decay_test.rs  engine_test.rs  proposal_test.rs  threshold_test.rs  vote_test.rs  window_test.rs
verdyce-chain/: Cargo.toml
verdyce-chain/src/: blockchain.rs
verdyce-cli/: Cargo.toml
verdyce-cli/src/: main.rs  redis.rs
verdyce-cli/src/commands/: evaluate.rs  mod.rs  new_proposal.rs  vote.rs
verdyce-core/: Cargo.toml
verdyce-core/src/: engine.rs  lib.rs
verdyce-core/src/decay/: mod.rs
verdyce-core/src/models/: mod.rs  proposal.rs  vote.rs
verdyce-core/src/threshold/: mod.rs
verdyce-core/src/window/: mod.rs
verdyce-core/tests/: decay_test.rs  engine_test.rs  proposal_test.rs  threshold_test.rs  vote_test.rs  window_test.rs
