[package]
name = "verdyce"
version = "0.1.0"
edition = "2024"
authors = ["Yuvraj Biswal yuvrajbiswalofficial@gmail.com"]
description = "A time-decay threshold consensus engine for decentralized voting and governance with configurable decay models and dynamic thresholds."
license = "MIT"
readme = "README.md"
repository = "https://github.com/Yuvraj-cyborg/verdyce"
homepage = "https://github.com/Yuvraj-cyborg/verdyce"
keywords = ["consensus", "voting", "dao", "decentralized", "governance"]
categories = ["algorithms", "data-structures", "cryptography"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
